test/tests/InterfaceSubclassingClass.expected
InterfaceSubclassingClass.frost:1:1: error: interface 'anonymous.Intf' cannot extend class 'anonymous.NotIntf'
1 error
