test/tests/InterfaceSubclassingClass.frost
class NotIntf {
}

interface Intf : NotIntf {
}